syntax = "proto3";

package go.micro.service.user;

service User{
  // 登录
  rpc Login(UserLoginRequest) returns(UserLoginResponse) {}
  // 注册
  rpc  Register(UserRegisterRequest) returns(UserRegisterResponse) {}
  // 查询用户信息
  rpc GetUserInfo(UserInfoRequest) returns(UserInfoResponse) {}
}

/*
message 变量名用 下划线命名法
*/

message UserLoginRequest {
  string user_name = 1;
  string password = 2;
}

message UserLoginResponse {
  string is_login_success = 1;
}

message UserRegisterRequest {
  string user_name = 1;
  string password = 2;
  string first_name = 3;
}

message UserRegisterResponse {
  string message = 1;
}

message UserInfoRequest {
  string user_name = 1;
}

message UserInfoResponse {
  int64 user_id = 1;
  string user_name = 2;  //账号
  string first_name = 3;  //用户昵称
}